<resources>
    <string name="app_name">Movie</string>
    <string name="skip_introduction">Skip Introduction</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Easier to find out which\nmovie is showing</string>
    <string name="presale">Pre Sale</string>
    <string name="presale_desc">Dont worry about missing\nthe latest movie updates</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Use e-wallet for easy\ntransactions</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="photo">Photo</string>
    <string name="upload_later">Upload Later</string>
    <string name="welcome">Welcome,\nRiyandi Firman</string>
    <string name="save_continue"><![CDATA[Save & Continue]]></string>
    <string name="coming_soon">Coming Soon</string>
    <string name="choose_seat">Choose Seat</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="checkout">Checkout</string>
    <string name="pay_now">Pay Now</string>
    <string name="cancel">Cancel</string>
    <string name="when">When</string>
    <string name="datetime">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="total_to_be_paid">Total to be Paid</string>
    <string name="ewallet">E-wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="save_update">Save New Update</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="balance_available">Balance Available</string>
    <string name="history_transaction">History Transaction</string>
    <string name="history">History</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_ticket">View Ticket</string>
    <string name="ticket_success_desc">Tickets have been purchased\nsuccessfully and enjoy the movie</string>
    <string name="happy_watching">Happy Watching!</string>
    <string name="home">Home</string>
    <string name="top_up_balance">Top Up Balance</string>
    <string name="custom_amount">Custom Amount</string>
    <string name="quick_options">Quick Options</string>
    <string name="tv_10k">Rp\n<b>10.000</b></string>
    <string name="tv_25k">Rp\n<b>25.000</b></string>
    <string name="tv_50k">Rp\n<b>50.000</b></string>
    <string name="tv_100k">Rp\n<b>100.000</b></string>
    <string name="tv_200k">Rp\n<b>200.000</b></string>
    <string name="tv_500k">Rp\n<b>500.000</b></string>
    <string name="you_got_it">You Got It!</string>
    <string name="top_up_success">E-wallet has been\nupdated successfully</string>
    <string name="view_wallet">View Wallet</string>
</resources>