<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    tools:context=".onboarding.OnboardingOneActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/m_semi_bold"
        android:gravity="center"
        android:text="@string/my_wallet"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_white_24" />

    <TextView
        android:id="@+id/tv_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/m_bold"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:text="Rp5.000.000,00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/m_regular"
        android:text="@string/balance_available"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_balance" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/m_medium"
        android:text="@string/custom_amount"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/m_medium"
        android:text="@string/quick_options"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_amount" />

    <Button
        android:id="@+id/btn_top_up"
        android:visibility="invisible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/shape_rectangle_pink"
        android:fontFamily="@font/m_semi_bold"
        android:text="@string/top_up_balance"
        android:textSize="16sp"
        app:backgroundTint="@color/colorPink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_10k"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/shape_line_white"
                android:fontFamily="@font/m_regular"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingTop="24dp"
                android:paddingRight="16dp"
                android:paddingBottom="24dp"
                android:text="@string/tv_10k"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_25k"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/shape_line_white"
                android:fontFamily="@font/m_regular"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingTop="24dp"
                android:paddingRight="16dp"
                android:paddingBottom="24dp"
                android:text="@string/tv_25k"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_50k"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_line_white"
                android:fontFamily="@font/m_regular"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingTop="24dp"
                android:paddingRight="16dp"
                android:paddingBottom="24dp"
                android:text="@string/tv_50k"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_100k"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/shape_line_white"
                android:fontFamily="@font/m_regular"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingTop="24dp"
                android:paddingRight="16dp"
                android:paddingBottom="24dp"
                android:text="@string/tv_100k"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_200k"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/shape_line_white"
                android:fontFamily="@font/m_regular"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingTop="24dp"
                android:paddingRight="16dp"
                android:paddingBottom="24dp"
                android:text="@string/tv_200k"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_500k"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_line_white"
                android:fontFamily="@font/m_regular"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingTop="24dp"
                android:paddingRight="16dp"
                android:paddingBottom="24dp"
                android:text="@string/tv_500k"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>